--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -21,6 +21,12 @@
     </div>
     <div class="carousel">
         <div *ngFor="let boxData of boxes; let i = index" class="box type-{{boxData.type}}" [args]="boxData" (click)="focus(i)"></div>
+        <div class="next-instagram">
+            <div class="more-btn">
+                <i class="icon-instagram"></i>
+                <a class="more-photos" href="https://www.instagram.com/doorisan_farmer/" target="_blank">사진 더 보러가기</a>
+            </div>
+        </div>
     </div>
     <!-- <div class="nav">
         <div class="buttons">
