--- a/src/styles/_store.scss
+++ b/src/styles/_store.scss
@@ -327,6 +327,7 @@
                 font-weight: normal;
                 vertical-align: middle;
                 background: #eee;
+                border:0;
             }
             & td {
                 padding: 5px 8px 6px 10px;
