--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -46,7 +46,11 @@ header {
             & ul li {
                 font-size: 1.063em;
                 margin-right: 40px;
+                &:nth-child(2)::after {
+                    border-right: 1px solid #999;
+                }
             }
+
         }
     }
     &.hidden {
@@ -138,7 +142,7 @@ header {
                         height: 13px;
                         margin-left: 8px;
                         // margin-top: 9px;
-                        border-right: 1px solid #c1c1c1;
+                        border-right: 1px solid #e9e9e9;
                         content: "";
                     }
                 }
