--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -22,6 +22,9 @@
         width: 100%;
         // height: 550px;
         overflow: hidden;
+        @media screen and (max-width: 500px) {
+            background: #ddd;
+        }
         & .carousel-bg {
             position: absolute;
             top: 0;
