--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,4 +1,20 @@
 <div id="sparassis-crispa" class="boundary sparassis-crispa">
+    <div class="typo">
+        <h2>탁월한 항암 효능, 꽃송이버섯</h2>
+        <p>꽃송이버섯은 가장 많은 베타글루칸이 함유된 천연물입니다. 베타글루칸은 잘 알려진 항암 물질이며 혈당과 혈중 콜레스테롤 감소에도 효과가 있습니다. 꽃송이버섯의 베타글루칸 함유량은 잎새버섯이나 아가리쿠스 보다 3~5배 많아 버섯 중에서도 으뜸이라 할 수 있습니다.</p>
+        <a class="source-link" href="https://youtu.be/wUVvBqsMN1A" target="_blank">
+            <span class="thumb"></span>
+            <dl>
+                <dt>명품! 꽃송이버섯의 효능</dt>
+                <dd>TV조선 내 몸 사용설명서 110회</dd>
+                <dd class="link-btn">자세히 보기</dd>
+            </dl>
+        </a>
+    </div>
+    <div class="image"></div>
+</div>
+
+<!-- <div id="sparassis-crispa" class="boundary sparassis-crispa">
     <div class="bg"></div>
     <div class="typo">
         <h2>탁월한 항암 효능, 꽃송이버섯</h2>
@@ -12,4 +28,4 @@
             </dl>
         </a>
     </div>
-</div>
+</div> -->
