--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,8 +4,8 @@
         <dl class="info">
             <dt>두리산버섯농장</dt><dd>경상북도 상주시 모동면 이동6길 117</dd><br>
             <dt>사업자등록번호</dt><dd>605-94-91120</dd><span class="bar"></span>
-            <dt>통신판매업번호</dt><dd>제2017-전라도-000호</dd><br>
-            <dt>전화</dt><dd>010-1234-5678</dd><span class="bar"></span>
+            <dt>통신판매업번호</dt><dd>2017-경북상주-0080</dd><br>
+            <dt>전화</dt><dd>010-4805-4234</dd><span class="bar"></span>
             <dt>이메일</dt><dd>doorisan52@gmail.com</dd><span class="bar"></span>
             <dt>대표자</dt><dd>서중교</dd>
         </dl>
