--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -3,24 +3,9 @@
     <p>{{picDate}}</p>
 </div> -->
 <div class="picstream">
-    <div class="carousel-bg">
-        <div class="left-side {{mainPicType}}">
-            <div class="picinfo">
-                <h2>{{boxes[0].title}}</h2>
-                <p>{{boxes[0].desc}}</p>
-                <p class="date">{{boxes[0].date}}</p>
-            </div>
-        </div>
-        <!-- <div class="right-side {{mainPicType}}">
-            <div class="picinfo">
-                <h2>{{boxes[boxes.length-1].title}}</h2>
-                <p>{{boxes[boxes.length-1].desc}}</p>
-                <p>{{boxes[boxes.length-1].date}}</p>
-            </div>
-        </div>  -->
-    </div>
+    <div class="carousel-bg"></div>
     <div class="carousel">
-        <div *ngFor="let boxData of boxes; let i = index" class="box type-{{boxData.type}}" [args]="boxData" (click)="focus(i)"></div>
+        <div *ngFor="let boxData of boxes; let i = index" class="box type-a" [mediaObj]="boxData" (click)="focus(i)"></div>
         <div class="next-instagram">
             <div class="more-btn">
                 <i class="icon-instagram"></i>
