--- a/src/styles/_media.1.scss
+++ b/src/styles/_media.1.scss
@@ -38,6 +38,69 @@
                     display: none;
                 }
             }
+            & .left-side {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                float: left;
+                width: 50%;
+                height: 100%;
+                &.wideType {
+                    margin-left: -220px;
+                }
+                &.halfType {
+                    margin-left: -110px;
+                }
+                & .picinfo {
+                    max-width: 270px;
+                    text-align: left;
+                    word-break: keep-all;
+                    & h2 {
+                        margin-bottom: 0;
+                        font-size: 2.000em;
+                        font-weight: normal;
+                        line-height: 1.3;
+                        color: $titleColor;
+                    }
+                    & p {
+                        margin: 12px 0 0 0;
+                        font-size: 1.063em;
+                        font-weight: 300;
+                        line-height: 1.3;
+                    }
+                    & .date {
+                        font-size: 0.938em;
+                        display: inline-block;
+                        margin-top: 12px;
+                    }
+                }
+            }
+            & .right-side {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                float: right;
+                width: 50%;
+                height: 100%;
+                &.wideType {
+                    margin-right: -220px;
+                }
+                &.halfType {
+                    margin-right: -110px;
+                }
+                & .picinfo {
+                    max-width: 270px;
+                    text-align: left;
+                    & h2 {
+                        margin-bottom: 0;
+                        font-size: 1.500em;
+                    }
+                    & p {
+                        margin: 15px 0 0 0;
+                        font-size: 0.813em;
+                    }
+                }
+            }
         }
         & .carousel {
             position: relative;
@@ -46,6 +109,7 @@
             & .box {
                 display: inline-block;
                 position: relative;
+                height: 550px;
                 cursor: pointer;
                 & .source {
                     position: relative;
@@ -67,19 +131,19 @@
                     height: 100%;
                     overflow: hidden;
                     &.focus {
-                        & .bg {
-                            opacity: 0.7;
+                        & .image {
+                            transform: scale(1, 1);
                         }
-                        & .typo {
-                            opacity: 1;
+                        & .bg {
+                            opacity: .3;
                         }
                     }
                     & .image {
                         width: 100%;
                         height: 100%;
-                        background: transparent no-repeat center center;
-                        // transform: scale(1.05, 1.05);
-                        // @include transition(all .45s ease);
+                        background: transparent no-repeat center center/cover;
+                        transform: scale(1.05, 1.05);
+                        @include transition(all .45s ease);
                     }
                     & .bg {
                         position: absolute;
@@ -88,7 +152,7 @@
                         width: 100%;
                         height: 100%;
                         background-color: #27282d;
-                        opacity: 0;
+                        opacity: .6;
                         @include transition(opacity .6s ease);
                         &:after {
                             position: absolute;
@@ -110,8 +174,6 @@
                         color: #fff;
                         width: 100%;
                         padding: 55px 45px;
-                        opacity: 0;
-                        @include transition(opacity .6s ease);
                         @media screen and (max-width: 500px) {
                             padding: 0 35px 75px 35px;
                         }
@@ -139,7 +201,7 @@
                     }
                 }
                 &.type-a {
-                    max-width: $widePicWidth;
+                    width: $widePicWidth;
                     & .typo {
                         max-width: 480px;
                         left: 0;
@@ -149,10 +211,10 @@
                     }
                 }
                 &.type-b {
-                    max-width: $halfPicWidth;
+                    width: $halfPicWidth;
                 }
                 &.type-c {
-                    max-width: $halfPicWidth;
+                    width: $halfPicWidth;
                     & .typo {
                         // display: flex;
                         // flex-direction: column;
