--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -1,7 +1,3 @@
-<!-- <div class="picinfo top" [@viewState]="topPicinfoViewState">
-    <h2>{{picTitle}}</h2>
-    <p>{{picDate}}</p>
-</div> -->
 <div class="picstream">
     <div class="carousel-bg"></div>
     <div class="carousel">
@@ -18,4 +14,5 @@
         <a class="prev" href="#" [@viewState]="prevButtonViewState">PREV</a>
         <a class="next" href="#" [@viewState]="nextButtonViewState">NEXT</a>
     </div>  -->
+    <div class="image-loading" *ngIf="!loadingComplete">사진을 가져오는 중입니다.</div>
 </div>
