--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -5,14 +5,14 @@
         <div class="next-instagram">
             <div class="more-btn">
                 <i class="icon-instagram"></i>
-                <a class="more-photos" href="https://www.instagram.com/doorisan_farmer/" target="_blank">사진 더 보러가기</a>
+                <a class="more-photos" href="https://www.instagram.com/doorisan_farmer/" target="_blank">사진 더 보러가기<i>go</i></a>
             </div>
         </div>
     </div>
-    <!-- <div class="nav">
+    <div class="nav">
         <div class="buttons">
-        <a class="prev" href="#" [@viewState]="prevButtonViewState">PREV</a>
-        <a class="next" href="#" [@viewState]="nextButtonViewState">NEXT</a>
-    </div>  -->
+        <a class="prev" href="#" [@viewState]="prevButtonViewState"><i>prev</i></a>
+        <a class="next" href="#" [@viewState]="nextButtonViewState"><i>next</i></a>
+    </div>  
     <div class="image-loading" *ngIf="!loadingComplete">사진을 가져오는 중입니다.</div>
 </div>
