--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 @import url("http://fonts.googleapis.com/earlyaccess/notosanskr.css");
-@import url("http://fonts.googleapis.com/earlyaccess/nanummyeongjo.css");
+// @import url("http://fonts.googleapis.com/earlyaccess/nanummyeongjo.css");
 
 $pageWidth: 1080px;
 $widePicWidth: 8570px;
@@ -50,9 +50,9 @@ h2, h3, h4 {
     padding: 0;
     color: $titleColor;
 }
-h2 {
-    font-family: 'Nanum Myeongjo', 'Noto Sans KR', sans-serif;
-}
+// h2 {
+//     font-family: 'Nanum Myeongjo', 'Noto Sans KR', sans-serif;
+// }
 a {
     text-decoration: none;
     color:inherit;
