--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -27,9 +27,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: #eee;
+            background: #eeeeee url("/assets/images/insta-bg.jpg") repeat-x left top;
             @media screen and (max-width: 1650px) {
-                background: transparent !important;
                 & .left-side .picinfo, & .right-side .picinfo {
                     display: none;
                 }
@@ -191,18 +190,31 @@
                     & .icon-instagram {
                         display: block;
                         overflow: hidden;
-                        width: 175px;
-                        height: 52px;
-                        background-position: 0 0 !important;
+                        width: 207px;
+                        height: 51px;
+                        background-position: -64px 0 !important;
                         text-indent: 101%;
                         white-space: nowrap;
-                        background: transparent url("/assets/images/instagram.png") no-repeat;
+                        background: transparent url("/assets/images/ico-grp.png") no-repeat;
                     }
                     & .more-photos {
                         display: block;
                         margin-top: 8px;
+                        line-height: 1;
+                        color: rgba(255, 255, 255, 0.8);
                         &:hover {
                             text-decoration: underline;
+                        }
+                        & i {
+                            display: inline-block;
+                            overflow: hidden;
+                            width: 16px;
+                            height: 16px;
+                            margin-left: 5px;
+                            background-position: -48px 0 !important;
+                            text-indent: 101%;
+                            white-space: nowrap;
+                            background: transparent url("/assets/images/ico-grp.png") no-repeat;
                         }
                     }
                 }
@@ -219,18 +231,39 @@
                 box-sizing: border-box;
                 width: 100%;
                 height: 0;
-                max-width: 1050px;
                 margin: 0 auto;
-                padding: 0 15px;
+                padding: 0;
                 & a {
                     display: inline-block;
-                    margin-top: 260px;
+                    margin-top: 215px;
+                    width: 50px;
+                    height: 85px;
+                    background: rgba(0, 0, 0, 0.6);
                     font-size: 1.313em;
                     font-weight: 100;
                     color: #fff;
+                    & i {
+                        display: inline-block;
+                        width: 24px;
+                        height: 45px;
+                        
+                        overflow: hidden;
+                        text-indent: 101%;
+                        background: url(/assets/images/ico-grp.png) no-repeat;
+                    }
                 }
                 & .next {
                     float: right;
+                    & i {
+                        margin: 20px 14px;
+                        background-position: 0 0;
+                    }
+                }
+                & .prev {
+                    & i {
+                        margin: 20px 12px;
+                        background-position: -24px 0;
+                    }
                 }
             }
         }
