--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,18 +1,20 @@
 <div id="sparassis-crispa" class="boundary sparassis-crispa">
     <div class="bg"></div>
-    <div class="typo">
-        <h2>탁월한 항암 효능, 꽃송이버섯</h2>
-        <p>꽃송이버섯은 가장 많은 베타글루칸이 함유된 천연물입니다. 베타글루칸은 잘 알려진 항암 물질이며 혈당과 혈중 콜레스테롤 감소에도 효과가 있습니다. 꽃송이버섯의 베타글루칸 함유량은 잎새버섯이나 아가리쿠스 보다 3~5배 많아 버섯 중에서도 으뜸이라 할 수 있습니다.</p>
-        <a class="source-link" href="https://youtu.be/wUVvBqsMN1A" target="_blank">
-            <span class="thumb"></span>
-            <dl>
-                <dt>명품! 꽃송이버섯의 효능</dt>
-                <dd>TV조선 내 몸 사용설명서 110회</dd>
-                <dd class="link-btn">자세히 보기</dd>
-            </dl>
-        </a>
+    <div class="inner-content">
+        <div class="typo">
+            <h2>탁월한 항암 효능, 꽃송이버섯</h2>
+            <p>꽃송이버섯은 가장 많은 베타글루칸이 함유된 천연물입니다. 베타글루칸은 잘 알려진 항암 물질이며 혈당과 혈중 콜레스테롤 감소에도 효과가 있습니다. 꽃송이버섯의 베타글루칸 함유량은 잎새버섯이나 아가리쿠스 보다 3~5배 많아 버섯 중에서도 으뜸이라 할 수 있습니다.</p>
+            <a class="source-link" href="https://youtu.be/wUVvBqsMN1A" target="_blank">
+                <span class="thumb"></span>
+                <dl>
+                    <dt>명품! 꽃송이버섯의 효능</dt>
+                    <dd>TV조선 내 몸 사용설명서 110회</dd>
+                    <dd class="link-btn">자세히 보기</dd>
+                </dl>
+            </a>
+        </div>
+        <div class="image"></div>
     </div>
-    <div class="image"></div>
 </div>
 <div id="grape" class="boundary grape">
     <div class="bg"></div>
@@ -27,7 +29,7 @@
             <span class="first-line"><strong>농장</strong>의 <strong>이야기</strong>를</span>
             <span class="sec-line">들어보세요</span>
         </div>
-        <a class="go-instagram"><i>인스타그램 바로가기</i></a>
+        <a class="go-instagram" href="https://www.instagram.com/doorisan_farmer/" target="_blank"><i>인스타그램 바로가기</i></a>
     </div>
 </div>
 <div id="wasong" class="boundary wasong">
@@ -35,7 +37,7 @@
     <div class="typo">
         <h2>와송<span class="alt-lang">[瓦松]</span></h2>
         <p>지붕 위 기와에서 자라는 모습이 소나무 꽃과 닮았다고 해서 와송이라 부릅니다. 열량이 낮고 식이섬유가 풍부해 다이어트에 좋습니다.</p>
-        
+
     </div>
 </div>
 
