--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -28,8 +28,6 @@
         // }
     }
     & .sparassis-crispa {
-        display: flex;
-        align-items: center;
         height: 500px;
         & .bg {
             background: transparent url("/assets/images/farm-illust-bg.png") no-repeat right bottom;
@@ -38,93 +36,102 @@
             }
         }
         @media screen and (max-width: 980px) {
+            padding: 25px 0 !important;
             height: auto;
         }
-        & .image {
-            width: 580px;
-            margin-right: 120px;
-            height: 340px;
-            background-image: url("/assets/images/mush-01.jpg");
-            @media screen and (max-width: 800px) {  
-                display: none;
-            }
-            @media screen and (min-width: 801px) and (max-width: 1050px) {
-                width: 40%;
-                margin-right: 45px;
-            }
-            @media screen and (min-width: 1051px) and (max-width: 1440px) {
-                margin-right: 80px;
-            }
-        }
-        & .typo {
-            width: 450px;
-            margin-right: 120px;
-            margin-left: 150px;
-            @media screen and (max-width: 500px) {
-                width: 100%;
-                margin-top: 0;
-                margin-right: 30px;
-                margin-left: 30px;
-            }
-            @media screen and (min-width: 501px) and (max-width: 800px) {
-                width: 100%;
-                margin-top: 0;
-                margin-right: 45px;
-                margin-left: 45px;
-            }
-            @media screen and (min-width: 801px) and (max-width: 1050px) {
-                width: 60%;
-                margin-top: 0;
-                margin-right: 45px;
-                margin-left: 45px;
-            }
-            @media screen and (min-width: 1051px) and (max-width: 1440px) {
-                margin-right: 80px;
-                margin-left: 80px;
-            }
-            & h2 {
-                font-size: 1.750em;
-                line-height: 1.5;
-                text-align: left;
-                word-break: keep-all;
-            }
-            & p {
-                // max-width: 650px;
-                text-align: justify;
-                margin: 20px 0 0 0;
-                font-size: 1em;
-                line-height: 1.5;
-            }
-            & .source-link {
-                display: block;
-                margin-top: 25px;
-                @media screen and (max-width: 500px) {
+        & .inner-content {
+            display: flex;
+            margin: 0 auto;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            max-width: 1400px;
+            & .image {
+                width: 580px;
+                margin-right: 120px;
+                height: 340px;
+                background-image: url("/assets/images/mush-01.jpg");
+                @media screen and (max-width: 800px) {
                     display: none;
                 }
-                & .thumb {
-                    display: inline-block;
-                    width: 168px;
-                    height: 94px;
-                    background: url("/assets/images/thumb_mybody.jpg") no-repeat center center/cover;
-                    // background: #999;
+                @media screen and (min-width: 801px) and (max-width: 1050px) {
+                    width: 40%;
+                    margin-right: 45px;
                 }
-                & dl {
-                    display: inline-block;
-                    margin: 0 0 0 15px;
-                    & dt {
-                        color: #000;
+                @media screen and (min-width: 1051px) and (max-width: 1440px) {
+                    margin-right: 80px;
+                }
+            }
+            & .typo {
+                width: 450px;
+                margin-right: 120px;
+                margin-left: 150px;
+                @media screen and (max-width: 500px) {
+                    width: 100%;
+                    margin-top: 0;
+                    margin-right: 30px;
+                    margin-left: 30px;
+                }
+                @media screen and (min-width: 501px) and (max-width: 800px) {
+                    width: 100%;
+                    margin-top: 0;
+                    margin-right: 45px;
+                    margin-left: 45px;
+                }
+                @media screen and (min-width: 801px) and (max-width: 1050px) {
+                    width: 60%;
+                    margin-top: 0;
+                    margin-right: 45px;
+                    margin-left: 45px;
+                }
+                @media screen and (min-width: 1051px) and (max-width: 1440px) {
+                    margin-right: 80px;
+                    margin-left: 80px;
+                }
+                & h2 {
+                    font-size: 1.750em;
+                    line-height: 1.5;
+                    text-align: left;
+                    word-break: keep-all;
+                }
+                & p {
+                    // max-width: 650px;
+                    text-align: justify;
+                    margin: 20px 0 0 0;
+                    font-size: 1em;
+                    line-height: 1.5;
+                }
+                & .source-link {
+                    display: block;
+                    margin-top: 25px;
+                    @media screen and (max-width: 500px) {
+                        display: none;
                     }
-                    & dd {
-                        margin-top: 5px;
-                        font-size: 0.875em;
-                        &.link-btn {
-                            margin-top: 20px;
-                            padding: 0;
-                            width: 105px;
-                            color: #00afff;
+                    & .thumb {
+                        display: inline-block;
+                        width: 168px;
+                        height: 94px;
+                        background: url("/assets/images/thumb_mybody.jpg") no-repeat center center/cover;
+                        // background: #999;
+                    }
+                    & dl {
+                        display: inline-block;
+                        margin: 0 0 0 15px;
+                        & dt {
+                            color: #000;
                         }
-                    }
+                        & dd {
+                            margin-top: 5px;
+                            font-size: 0.875em;
+                            &.link-btn {
+                                margin-top: 20px;
+                                padding: 0;
+                                width: 105px;
+                                color: #00afff;
+                            }
+                        }
 
+                    }
                 }
             }
         }
@@ -179,7 +186,7 @@
                         content: '"';
                         font-weight: bold;
                     }
-    
+
                 }
                 & .sec-line {
                     display: block;
@@ -243,5 +250,5 @@
             }
         }
     }
-    
+
 }
