--- a/src/styles/_store.scss
+++ b/src/styles/_store.scss
@@ -1,6 +1,6 @@
 .store {
     & .boundary {
-        max-width: 100% !important;
+        // max-width: 100% !important;
     }
     background: #f6f6f6;
     background-image: -ms-linear-gradient(top, #F6F6F6 90%, #EEEEEE 100%);
@@ -17,10 +17,11 @@
         }
         & .product {
             display: inline-block;
-            max-width: 320px;
+            // max-width: 320px;
+            max-width: 480px;
             width: 100%;
             margin: 0 8px;
-            margin-bottom: 25px;
+            margin-bottom: 20px;
             background: #fff;
             @include box-shadow(1px 1px 3px #eeeeee);
             @media screen and (max-width: 500px) {
@@ -38,20 +39,21 @@
             }
             & .top {
                 border: 1px solid #e1e1e1;
-                border-bottom: none;
+                // border-bottom: none;
                 cursor: pointer;
                 @include user-select(none);
                 @media screen and (max-width: 500px) {
                     text-align: left;
                     border-left: none;
                     border-right: none;
-                    padding: 25px 25px 0 25px;
-                    margin-bottom: 10px;
+                    // padding: 25px 25px 0 25px;
+                    padding: 20px;
+                    // margin-bottom: 10px;
                 }
                 & .thumb {
                     position: relative;
                     width: 100%;
-                    height: 220px;
+                    height: 230px;
                     background: transparent no-repeat center center/cover;
                     @media screen and (max-width: 500px) {
                         display: inline-block;
@@ -91,39 +93,45 @@
                     }
                 }
                 & .info {
+                    padding: 15px 0;
                     @media screen and (max-width: 500px) {
                         display: inline-block;
                         height: 80px;
+                        padding: 0;
                     }
                     & .title {
-                        padding: 30px 20px;
                         width: 100%;
                         font-size: 1.063em;
                         color: $titleColor;
-                        line-height: 28px;
+                        line-height: 1.5;
                         text-align: center;
                         @media screen and (max-width: 500px) {
                             padding: 0;
                             text-align: left;
                         }
                         @media screen and (min-width: 501px) and (max-width: 1050px) {
-                            padding: 15px 10px 5px 10px;
+                            // padding: 15px 10px 5px 10px;
                         }
                     }
                     & .price {
-                        display: none;
-                        font-size: 0.938em;
+                        // display: none;
+                        font-size: 1.063em;
+                        line-height: 1.3;
+                        vertical-align: middle;
                         @media screen and (max-width: 500px) {
-                            display: block;
+                            display: inline-block;
+                            font-size: 0.938em;
                         }
                     }
                     & .o-price {
-                        display: none;
-                        font-size: 0.750em;
+                        // display: none;
+                        font-size: 0.938em;
                         text-decoration: line-through;
-                        line-height: 26px;
+                        line-height: 1.3;
+                        vertical-align: middle;
                         @media screen and (max-width: 500px) {
-                            display: block;
+                            display: inline-block;
+                            font-size: 0.938em;
                         }
                     }
                     & .soldout-remain {
@@ -287,6 +295,28 @@
                     }
                 }
             }
+        }
+    }
+    & .go-store {
+        display: block;
+        margin: 35px auto 0 auto;
+        width: 280px;
+        height: 55px;
+        border: 1px solid #fff;
+        padding: 13px 0 0 23px;
+        background: #48a12d;
+        @media screen and (max-width: 980px) {
+            margin-top: 15px;
+        }
+        & i {
+            display: inline-block;
+            overflow: hidden;
+            width: 235px;
+            height: 32px;
+            background-position: 0 -82px !important;
+            text-indent: 101%;
+            white-space: nowrap;
+            background: transparent url("/assets/images/ico-grp.png") no-repeat;
         }
     }
     & .notice {
