--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,15 @@
 <div class="boundary">
-    <div class="left"><span class="logo">두리산농장</span></div>
+    <div class="left">
+        <dl class="account-info">
+            <dt>계좌정보</dt>
+            <dd class="account">351-0968-0778-63</dd>
+            <dd>농협) 예금주 서중교(두리산버섯농장)</dd>
+        </dl>
+        <dl>
+            <dd>고객님은 안전거래를 위해 현금 등으로 결제 시 농협 에스크로 서비스를 이용하시면 안전하게 결제대금을 입금하실 수 있습니다.</dd>
+            <a class="btn-link" href="javascript:onPopCertMar('0f018091bf7a0b29c90bb26d208f7f95')">서비스가입사실확인</a>
+        </dl>
+    </div>
     <div class="right">
         <dl class="info">
             <dt>두리산버섯농장</dt><dd>경상북도 상주시 모동면 이동6길 117</dd><br>
@@ -9,14 +19,13 @@
             <dt>이메일</dt><dd>doorisan52@gmail.com</dd><span class="bar"></span>
             <dt>대표자</dt><dd>서중교</dd>
         </dl>
-        <div class="marks">
-            <span class="icon">
-                <form name='CERTMARK_FORM' METHOD='POST' style="display: inline">
-                    <input type="hidden" name="certMarkURLKey">
-                </form>
-                <a href="javascript:onPopCertMar('0f018091bf7a0b29c90bb26d208f7f95')"><img src='https://escrow.nonghyup.com/images/IC/es/img_nh_mark02.gif' alt='에스크로이체로 결제하기' border='0'/></a>
-            </span>
-            <span class="icon"><a href="https://www.instagram.com/doorisan_farmer/" target="_blank" class="instagram">인스타그램</a></span>
-        </div>
+        <!-- <a class="btn-link" href="">사업자정보확인</a> -->
+        <dl class="site-link">
+                <!-- <dt><span class="logo">두리산농장</span></dt> -->
+                <dd>
+                    <span class="ico-share facebook">페이스북 퍼가기</span>
+                    <span class="ico-share instagram"><a href="https://www.instagram.com/doorisan_farmer/" target="_blank" class="instagram">인스타그램 바로가기</a></span>
+                </dd>
+            </dl>
     </div>
 </div>
