--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -17,7 +17,7 @@
             height: 100%;
             top: 0;
             left: 0;
-            background: #eee;
+            // background: #eeeeee url("/assets/images/insta-bg.jpg") repeat-x left top;
             text-align: center;
             padding-top: 250px;
         }
