--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,5 +1,7 @@
 footer {
-    border-top: 1px solid #e1e1e1;
+    background: #454545;
+    color: #cccccc;
+    font-size: 14px;
     & .boundary {
         max-width: $pageWidth;
         margin: 0 auto;
@@ -12,40 +14,92 @@ footer {
             & .right {
                 width: 100% !important;
                 margin-left: 0 !important;
-                margin-top: 25px;
+                margin-top: 20px;
+                padding-left: 0 !important;
+            }
+        }
+        & dl {
+            margin-top: 10px;
+            &:first-child {
+                margin-top: 0;
+            }
+        }
+        & a.btn-link {
+            display: inline-block;
+            margin-top: 7px;
+            color: #b9b9b9;
+            &:hover {
+                color: #fff;
             }
         }
         & .left {
             display: inline-block;
             width: 50%;
-            & .logo {
-                display: block;
-                overflow: hidden;
-                width: 110px;
-                height: 92px;
-                background-position: 0 0;
-                background-size: 100% auto !important;
-                text-indent: 101%;
-                white-space: nowrap;
-                background: transparent url("/assets/images/logo_d_gr.png") no-repeat;
+            padding-right: 35px;
+            & .account-info {
+                font-size: 16px;
+                dd.account {
+                    color: #fff;
+                    font-size: 21px;
+                    font-weight: bolder;
+                    line-height: 1.3;
+                }
             }
         }
         & .right {
             display: inline-block;
             width: 50%;
             margin-left: -4px;
+            padding-left: 35px;
+            & .site-link {
+                margin-top: 25px;
+                // height: 75px;
+                // & dt {
+                //     float: left;
+                // }
+                // & dd {
+                //     float: right;
+                // }
+                & .logo {
+                    display: block;
+                    overflow: hidden;
+                    width: 90px;
+                    height: 75px;
+                    background-position: 0 0;
+                    background-size: 100% auto !important;
+                    text-indent: 101%;
+                    white-space: nowrap;
+                    background: transparent url("/assets/images/logo_d_gr.png") no-repeat;
+                }
+                & .ico-share {
+                    display: inline-block;
+                    margin-right: 8px;
+                    overflow: hidden;
+                    width: 32px;
+                    height: 32px;
+                    background-position: 0 0;
+                    background-size: 100% auto !important;
+                    text-indent: 101%;
+                    white-space: nowrap;
+                }
+                & .facebook {
+                    background: transparent url("/assets/images/facebook-circle.png") no-repeat;
+                }
+                & .instagram {
+                    background: transparent url("/assets/images/instagram-circle.png") no-repeat;
+                }
+            }
             & .info {
-                font-size: 0.875em;
-                line-height: 24px;
+                // line-height: 1.3;
                 @media screen and (max-width: 980px) {
                     & .bar {
                         display: block;
                     }
                     & .bar:after {
-                        display: none;
+                        display: none !important;
                     }
                     & dt {
-                        width: 100px;
+                        max-width: 110px;
                     }
                 }
                 & dt {
@@ -56,35 +110,19 @@ footer {
                     display: inline-block;
                 }
                 & .bar:after {
-                    content: "|";
-                    color: #c1c1c1;
-                    padding-left: 5px;
-                    padding-right: 1px;
-                    font-size: 0.750em;
-                    vertical-align: top;
+                    content: "";
+                    position: relative;
+                    display: inline-block;
+                    top: -1px;
+                    width: 1px;
+                    height: 10px;
+                    margin: 0 1px 0 7px;
+                    border-left: 1px solid #c1c1c1;
+                    vertical-align: middle;
+                    line-height: 1;
                 }
-            }
-            & .marks {
-                display: flex;
-                align-items: center;
-                margin-top: 25px;
-                padding: 0 3px;
-                & .icon {
-                    margin-right: 25px;
-                    &:last-child {
-                        margin-right: 0;
-                    }
-                    & .instagram {
-                        display: inline-block;
-                        overflow: hidden;
-                        width: 110px;
-                        height: 35px;
-                        background-position: -245px 0 !important;
-                        text-indent: 101%;
-                        white-space: nowrap;
-                        background: transparent url("/assets/images/instagram.png") no-repeat;
-                    }
-                }
+
+                
             }
         }
     }
