--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,4 +1,4 @@
-<div id="sparassis-crispa" class="boundary sparassis-crispa">
+<div id="sparassis-crispa" class="boundary sparassis-crispa" [style.height]="sectionHeight + 'px'">
     <div class="bg"></div>
     <div class="inner-content">
         <div class="typo">
@@ -16,7 +16,7 @@
         <div class="image"></div>
     </div>
 </div>
-<div id="grape" class="boundary grape">
+<div id="grape" class="boundary grape" [style.height]="sectionHeight + 'px'">
     <div class="bg"></div>
     <div class="typo">
         <p>고랭지에서 키워<br>당도가 높은 포도</p>
@@ -32,7 +32,7 @@
         <a class="go-instagram" href="https://www.instagram.com/doorisan_farmer/" target="_blank"><i>인스타그램 바로가기</i></a>
     </div>
 </div>
-<div id="wasong" class="boundary wasong">
+<div id="wasong" class="boundary wasong" [style.height]="sectionHeight + 'px'">
     <div class="bg"></div>
     <div class="typo">
         <h2>와송<span class="alt-lang">[瓦松]</span></h2>
