--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -44,7 +44,7 @@
             </div> -->
         </div>
     </div>
-    <a class="go-store" href="https://www.instagram.com/doorisan_farmer/" target="_blank"><i>스토어 바로가기</i></a>
+    <a class="go-store" href="http://storefarm.naver.com/doorisan" target="_blank"><i>스토어 바로가기</i></a>
 
     <!-- <div class="product-box">
         <div *ngFor="let product of products; let i = index" class="product" [class.soldout]="product.soldout">
