--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -16,13 +16,13 @@
         <div class="image"></div>
     </div>
 </div>
-<div id="grape" class="boundary grape" [style.height]="sectionHeight + 'px'">
+<!-- <div id="grape" class="boundary grape" [style.height]="sectionHeight + 'px'">
     <div class="bg"></div>
     <div class="typo">
         <p>고랭지에서 키워<br>당도가 높은 포도</p>
         <h2>샤인마스캇</h2>
     </div>
-</div>
+</div> -->
 <div class="instagram-link">
     <div class="wrap">
         <div class="txt">
@@ -32,14 +32,14 @@
         <a class="go-instagram" href="https://www.instagram.com/doorisan_farmer/" target="_blank"><i>인스타그램 바로가기</i></a>
     </div>
 </div>
-<div id="wasong" class="boundary wasong" [style.height]="sectionHeight + 'px'">
+<!-- <div id="wasong" class="boundary wasong" [style.height]="sectionHeight + 'px'">
     <div class="bg"></div>
     <div class="typo">
         <h2>와송<span class="alt-lang">[瓦松]</span></h2>
         <p>지붕 위 기와에서 자라는 모습이 소나무 꽃과 닮았다고 해서 와송이라 부릅니다. 열량이 낮고 식이섬유가 풍부해 다이어트에 좋습니다.</p>
 
     </div>
-</div>
+</div> -->
 
 <!-- <div id="sparassis-crispa" class="boundary sparassis-crispa">
     <div class="bg"></div>
