--- a/src/styles/_store.scss
+++ b/src/styles/_store.scss
@@ -18,7 +18,7 @@
         & .product {
             display: inline-block;
             // max-width: 320px;
-            max-width: 480px;
+            max-width: 330px;
             width: 100%;
             margin: 0 8px;
             margin-bottom: 20px;
@@ -124,11 +124,12 @@
                         }
                     }
                     & .o-price {
-                        // display: none;
+                        display: inline-block;
                         font-size: 0.938em;
                         text-decoration: line-through;
                         line-height: 1.3;
                         vertical-align: middle;
+                        padding-top: 2px;
                         @media screen and (max-width: 500px) {
                             display: inline-block;
                             font-size: 0.938em;
