--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <header></header>
-<header class="second-header" [class.floating]="topNavfloating"></header>
+<!-- <header class="second-header" [class.floating]="topNavfloating"></header> -->
 <div class="content">
-    <section id="media" class="media"></section>
-    <section id="intro" class="intro"></section>
+    <!-- <section id="media" class="media"></section>
+    <section id="intro" class="intro"></section> -->
     <section id="store" class="store"></section>
     <section id="scrap" class="scrap"></section>
     <!-- <section class="how-to-eat"></section> -->
