--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,17 +15,20 @@
             <dt>두리산버섯농장</dt><dd>경상북도 상주시 모동면 이동6길 117</dd><br>
             <dt>사업자등록번호</dt><dd>605-94-91120</dd><span class="bar"></span>
             <dt>통신판매업번호</dt><dd>2017-경북상주-0080</dd><br>
-            <dt>전화</dt><dd>010-4805-4234</dd><span class="bar"></span>
+            <dt>전화</dt><dd>050-5055-4234</dd><span class="bar"></span>
             <dt>이메일</dt><dd>doorisan52@gmail.com</dd><span class="bar"></span>
             <dt>대표자</dt><dd>서중교</dd>
         </dl>
         <!-- <a class="btn-link" href="">사업자정보확인</a> -->
         <dl class="site-link">
-                <!-- <dt><span class="logo">두리산농장</span></dt> -->
-                <dd>
-                    <span class="ico-share facebook">페이스북 퍼가기</span>
-                    <span class="ico-share instagram"><a href="https://www.instagram.com/doorisan_farmer/" target="_blank" class="instagram">인스타그램 바로가기</a></span>
-                </dd>
-            </dl>
+            <!-- <dt><span class="logo">두리산농장</span></dt> -->
+            <dd>
+                <span class="ico-share facebook">페이스북 퍼가기</span>
+                <span class="instagram"><a href="https://www.instagram.com/doorisan_farmer/" target="_blank" class="ico-share instagram">인스타그램 바로가기</a></span>
+            </dd>
+        </dl>
     </div>
+    <form name='CERTMARK_FORM' METHOD='POST' style="display: inline">
+        <input type="hidden" name="certMarkURLKey">
+    </form>
 </div>
