--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,6 +1,6 @@
 <div class="boundary">
     <div class="section-title">
-        <h2>상품주문</h2>
+        <h2>상품정보</h2>
         <p>농가에서 직접 판매해 유통<br>마진 없는 착한 가격</p>
     </div>
     <div class="product-box">
