--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header></header>
+<!-- <header></header> -->
 <!-- <header class="second-header" [class.floating]="topNavfloating"></header> -->
 <div class="content">
     <!-- <section id="media" class="media"></section>
