--- a/src/styles/_store.scss
+++ b/src/styles/_store.scss
@@ -10,19 +10,17 @@
     background-image: linear-gradient(to bottom, #F6F6F6 90%, #EEEEEE 100%);
     & .product-box {
         width: 100%;
-        text-align: center;
+
         padding: 0 15px;
         @media screen and (max-width: 500px) {
             padding: 0;
         }
         & .product {
+            position: relative;
             display: inline-block;
-            // max-width: 320px;
-            max-width: 330px;
-            width: 100%;
-            margin: 0 8px;
+            width: 33%;
+            padding: 0 8px;
             margin-bottom: 20px;
-            background: #fff;
             @include box-shadow(1px 1px 3px #eeeeee);
             @media screen and (max-width: 500px) {
                 max-width: 100%;
@@ -94,6 +92,8 @@
                 }
                 & .info {
                     padding: 15px 0;
+                    background: #fff;
+                    text-align: center;
                     @media screen and (max-width: 500px) {
                         display: inline-block;
                         height: 80px;
@@ -104,7 +104,6 @@
                         font-size: 1.063em;
                         color: $titleColor;
                         line-height: 1.5;
-                        text-align: center;
                         @media screen and (max-width: 500px) {
                             padding: 0;
                             text-align: left;
@@ -112,6 +111,12 @@
                         @media screen and (min-width: 501px) and (max-width: 1050px) {
                             // padding: 15px 10px 5px 10px;
                         }
+                    }
+                    & .desc {
+                        display: inline-block;
+                        width: 100%;
+                        font-size: 0.938em;
+                        margin-top: 3px;
                     }
                     & .price {
                         // display: none;
